# eacc_rs

./: .env.template  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  notes.txt
src/: error.rs  lib.rs  main.rs  telegram_api.rs  telemetry.rs  utils.rs  x_api.rs
src/abis/: MarketplaceData.json
tests/: integration_test.rs
