[package]
name = "eacc_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { version = "0.12", features = ["full"] }
tokio = { version = "1.0", features = ["full"] }
eyre = "0.6"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3.31"
serde_json = "1.0.140"
serde = "1.0.219"
datetime = "0.5.2"
cid = "0.11.1"
lazy_static = "1.5.0"
multihash = "0.19.3"
base64 = "0.22.1"
tracing = { version = "0.1", features = ["log"]}
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"]}
tracing-bunyan-formatter = "0.3"
tracing-log = "0.2"
# tracing-actix-web = "0.7"
# teloxide = { version = "0.15.0", features = ["macros"] }
dotenvy = "0.15"
# actix-web = "4.11.0"
thiserror = "2.0.12"
twitter-api-v1 = "0.2.1"
# uuid = "1.17.0"
# oauth1-twitter = "0.2.1"
# twitter-v2 = "0.1.8"  

# [dependencies.sqlx]
# version = "0.5.7"
# default-features = false
# features = [
#     "runtime-actix-rustls",
#     "macros",
#     "postgres",
#     "uuid",
#     "chrono",
#     "migrate"
# ]


[lib]
path = "src/lib.rs"
name = "eacc_rs"

[[bin]]
name = "test_x_post"
path = "src/bin/test_x_post.rs"

[dev-dependencies]
tracing-test = "0.2" # Optional, for log capture
